--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,9 @@
             "email": "daniel.fhonorato@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "guzzlehttp/guzzle": "^6.3",
+        "symfony/dom-crawler": "^4.2",
+        "symfony/css-selector": "^5.0"
+    }
 }
