--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
         "symfony/css-selector": "^5.0"
     },
     "autoload": {
+        "files": [
+            "./functions.php"
+        ],
         "psr-4": {
             "Alura\\BuscadorDeCursos\\" : "src/"
         }
