--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "8"
+        "phpunit/phpunit": "^8.1",
+        "squizlabs/php_codesniffer": "^3.5",
+        "phan/phan": "^3.0"
     }
 }
