--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,10 @@
         "phpunit/phpunit": "^8.1",
         "squizlabs/php_codesniffer": "^3.5",
         "phan/phan": "^3.0"
+    },
+    "scripts": {
+        "test" : "phpunit tests\\TestBuscadorCursos.php",
+        "cs" : "phpcs --standard=PSR12 src/",
+        "phan" : "phan --allow-polyfill-parser"
     }
 }
