--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,9 @@
             "@phan",
             "@cs",
             "@test"
+        ],
+        "post-update-cmd": [
+            "@test"
         ]
     },
     "scripts-descriptions": {
