--- a/composer.json
+++ b/composer.json
@@ -41,5 +41,6 @@
     },
     "scripts-descriptions": {
         "check" : "Roda as verificações do código. PHAN, PHPCS, PHPUNIT"
-    }
+    },
+    "license": "GPL-3.0"
 }
