--- a/composer.json
+++ b/composer.json
@@ -42,5 +42,6 @@
     "scripts-descriptions": {
         "check" : "Roda as verificações do código. PHAN, PHPCS, PHPUNIT"
     },
-    "license": "GPL-3.0"
+    "license": "GPL-3.0",
+    "bin": ["buscar-cursos-php"]
 }
